--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#797979</color>
+    <color name="yellow">#FAF100</color>
+    <color name="lightgray">#F2F0F0</color>
 </resources>
