--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="customFab">
+        <item name="android:textColor">@color/black</item>
+        <item name="background">@color/white</item>
+
+    </style>
     <style name="Theme.MyApplication.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.MyApplication.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
