--- a/app/src/main/res/layout/activity_add_text_story.xml
+++ b/app/src/main/res/layout/activity_add_text_story.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_200"
-    tools:context=".screens.AddTextStory">
+    tools:context=".screens.status.AddTextStory">
 
 
     <ImageButton
