--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,15 @@
                 android:padding="@dimen/_10sdp"
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/settings_button"
+                    android:onClick="goToSettings"
+                    android:text="settings"
+                    android:layout_marginStart="@dimen/_80sdp"
+                    />
+
         </LinearLayout>
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
