--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/gradient_drawable_light"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".screens.authentication.LoginFormActivity">
+    tools:context="com.example.myapplication.screens.authentication.LoginFormActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
