--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,7 +17,7 @@
             android:layout_width="@dimen/_38sdp"
             android:layout_height="@dimen/_38sdp"
             android:id="@+id/user_in_chat_image"
-            android:src="@mipmap/img"
+            android:src="@mipmap/logo"
             app:civ_border_color="@color/black"
             android:backgroundTint="@color/black"
             android:layout_marginStart="@dimen/_10sdp"
