--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -6,17 +6,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_5sdp"
         android:background="@color/design_default_color_secondary"
         >
         <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
+        android:id="@+id/current_user_profile_image"
+            android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_11sdp"
         android:layout_width="@dimen/_45sdp"
         android:layout_height="@dimen/_45sdp"
-        android:src="@mipmap/img"
+        android:src="@mipmap/logo"
         app:civ_border_width="@dimen/_2sdp"
         app:civ_border_color="#FF000000"/>
     <LinearLayout
