--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="gray">#c8c8c8</color>
     <color name="colorAccent">#03dac5</color>
     <color name="colorPrimaryDark">#3700b3</color>
-    <color name="colorPrimary">#6200ee</color>
+    <color name="colorPrimary">#2369DD</color>
 </resources>
