--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".screens.chat.Users">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -20,6 +18,20 @@
         android:layout_marginBottom="@dimen/_8sdp"
         android:layout_gravity="bottom|end"
         android:orientation="vertical">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_new_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:focusable="true"
+            app:fab_size="mini"
+            android:visibility="invisible"
+            android:layout_marginBottom="@dimen/_6sdp"
+            android:src="@drawable/ic_baseline_group_add_24"
+            android:contentDescription="@string/add_chat" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_new"
             android:layout_width="wrap_content"
