--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="colorAccent">#03dac5</color>
     <color name="colorPrimaryDark">#3700b3</color>
     <color name="colorPrimary">#2369DD</color>
+    <color name="colorOnPrimary">#000000</color>
+
 </resources>
