--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,11 +25,11 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
-                android:text="Logo"
+                android:text="@string/app_name"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="34sp"
