--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".screens.authentication.VerifyPhoneNumber">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/editTextNumberSigned"
@@ -12,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="528dp"
         android:ems="10"
-        android:hint="verefication code"
+        android:hint="@string/verification_code"
         android:inputType="numberSigned"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,12 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="228dp"
-        android:text="Button"
+        android:text="@string/verify_otp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned"
-        tools:ignore="UnknownId" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -42,6 +39,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verify_Btn"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
