--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -26,7 +26,7 @@
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_25sdp"
+            android:layout_height="wrap_content"
             android:paddingTop="0dp"
             android:lines="1"
             android:layout_marginStart="@dimen/_6sdp"
