--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -120,7 +120,7 @@
         <EditText
             android:id="@+id/msgTxt"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="13dp"
@@ -128,7 +128,6 @@
             android:background="@drawable/grey_btn"
             android:ems="10"
             android:hint="@string/send_message"
-            android:inputType="text"
             android:maxLines="6"
             android:minHeight="50dp"
             android:paddingLeft="@dimen/_12sdp"
