--- a/app/src/main/res/layout/fragment_stories.xml
+++ b/app/src/main/res/layout/fragment_stories.xml
@@ -78,7 +78,7 @@
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/addStory"
-        android:layout_width="4dp"
+        android:layout_width="wrap_content"
         android:layout_height="210dp"
         android:layout_marginEnd="@dimen/_12sdp"
         android:layout_marginBottom="@dimen/_12sdp"
