--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -6,8 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFFFF"
-        >
+        android:background="#F2FDFF">
         <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/current_user_profile_image"
@@ -37,10 +36,7 @@
             android:text="Name as it should."
             android:textSize="@dimen/_15ssp"
             android:textStyle="bold"
-            android:id="@+id/name"
-            android:textColor="@color/colorPrimary"
-
-            />
+            android:id="@+id/name"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,9 +48,6 @@
             android:padding="@dimen/_3sdp"
             android:textSize="@dimen/_12ssp"
             android:text="@string/message_should_be_displayed_here"
-            android:id="@+id/msg"
-            android:textColor="@color/colorPrimary"
-
-            />
+            android:id="@+id/msg" />
     </LinearLayout></LinearLayout>
 </androidx.cardview.widget.CardView>
