--- a/app/src/main/res/layout/user_msg.xml
+++ b/app/src/main/res/layout/user_msg.xml
@@ -10,12 +10,13 @@
         android:id="@+id/card_userMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#2979FF"
+        app:cardBackgroundColor="#cbe5ff"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
+        style="@style/Widget.Material3.CardView.Filled"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -34,7 +35,6 @@
                 android:paddingTop="8dp"
                 android:paddingRight="12dp"
                 android:text="This is a Message"
-                android:textColor="#ffffff"
                 android:textSize="16sp" />
         </LinearLayout>
 
