--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="dark_theme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">#000000</item>
+    <style name="dark_theme" parent="Theme.Material3.Dark">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionModeBackground">@color/colorPrimary</item>
-        <item name="backgroundColor">#1A1A1A</item>
         <item name="cardBackgroundColor">#292929</item>
-        <item name="android:textColor">@color/white</item>
         <item name="titleTextColor">@color/white</item>
         <item name="buttonTint">@color/main_purple</item>
     </style>
 
-    <style name="app_theme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/white</item>
+    <style name="app_theme" parent="Theme.Material3.Light">
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="backgroundColor">#FFFFFF</item>
         <item name="cardBackgroundColor">@color/gray</item>
         <item name="actionModeBackground">@color/black</item>
-        <item name="android:textColor">@color/black</item>
         <item name="titleTextColor">@color/black</item>
         <item name="buttonTint">@color/main_pink</item>
 
+    </style>
+    <style name="chat_room" parent="Theme.Material3.DynamicColors.DayNight">
+        <item name="statusBarBackground">#47617a</item>
+        <item name="colorPrimaryDark">#47617a</item>
+        <item name="actionBarTheme">@style/Widget.Material3.AppBarLayout</item>
     </style>
     <style name="roundedImageView" parent="">
         <item name="cornerFamily">rounded</item>
