--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -44,8 +44,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
                 android:foregroundGravity="center_vertical"
                 android:gravity="center_vertical"
                 android:text="TextView"
@@ -70,6 +70,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/presence_video_online" />
+
+            <TextView
+                android:id="@+id/lastSeen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="5dp"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toEndOf="@+id/recImg"
+                app:layout_constraintTop_toBottomOf="@+id/TVname"
+                tools:text="Last seen" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
